Agregados los campos de la consulta de DataBase

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<HTML>postalCode                     | pais                           | Coordenadas                    | administraciones               | poblacion                      | </HTML>
+<HTML>pais                           | Coordenadas                    | postalCode                     | poblacion                      | area                           | pic                            | </HTML>
